Sandbox/oldOctaveCallers/octaveCaller_new4/foo/codegen/mex/callFoo/build/glnxa64/buildLog.log
[1/11] g++ -fexceptions -fPIC -fno-omit-frame-pointer -pthread -std=c++11 -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c++11 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  /home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo/foo.cpp -o build/glnxa64/foo.o
FAILED: build/glnxa64/foo.o 
g++ -fexceptions -fPIC -fno-omit-frame-pointer -pthread -std=c++11 -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c++11 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  /home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo/foo.cpp -o build/glnxa64/foo.o
/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo/foo.cpp:5:1: error: expected initializer before ‘double’
 double foo (double in1, double in2) 
 ^
[2/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  rt_nonfinite.c -o build/glnxa64/rt_nonfinite.o
[3/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  /usr/local/MATLAB/R2020a/extern/version/c_mexapi_version.c -o build/glnxa64/c_mexapi_version.o
[4/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  callFoo.c -o build/glnxa64/callFoo.o
FAILED: build/glnxa64/callFoo.o 
/bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  callFoo.c -o build/glnxa64/callFoo.o
In file included from callFoo.c:16:0:
rt_nonfinite.h: In function ‘foo’:
rt_nonfinite.h:16:15: error: storage class specified for parameter ‘mex_rtInf’
 extern real_T mex_rtInf;
               ^
rt_nonfinite.h:17:15: error: storage class specified for parameter ‘mex_rtMinusInf’
 extern real_T mex_rtMinusInf;
               ^
rt_nonfinite.h:18:15: error: storage class specified for parameter ‘mex_rtNaN’
 extern real_T mex_rtNaN;
               ^
rt_nonfinite.h:19:17: error: storage class specified for parameter ‘mex_rtInfF’
 extern real32_T mex_rtInfF;
                 ^
rt_nonfinite.h:20:17: error: storage class specified for parameter ‘mex_rtMinusInfF’
 extern real32_T mex_rtMinusInfF;
                 ^
rt_nonfinite.h:21:17: error: storage class specified for parameter ‘mex_rtNaNF’
 extern real32_T mex_rtNaNF;
                 ^
rt_nonfinite.h:34:13: error: storage class specified for parameter ‘mex_InitInfAndNan’
 extern void mex_InitInfAndNan(void);
             ^
callFoo.c:20:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 {
 ^
In file included from callFoo.c:15:0:
/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo/foo.h:1:8: error: old-style parameter declarations in prototyped function definition
 double foo (double in1, double in2) 
        ^
callFoo.c:27:1: error: expected ‘{’ at end of input
 }
 ^
[5/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  callFoo_data.c -o build/glnxa64/callFoo_data.o
[6/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  interface/_coder_callFoo_api.c -o build/glnxa64/_coder_callFoo_api.o
[7/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  callFoo_initialize.c -o build/glnxa64/callFoo_initialize.o
[8/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  callFoo_terminate.c -o build/glnxa64/callFoo_terminate.o
[9/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  interface/_coder_callFoo_info.c -o build/glnxa64/_coder_callFoo_info.o
[10/11] /bin/gcc -fexceptions -fPIC -fno-omit-frame-pointer -pthread -D_GNU_SOURCE -DMATLAB_MEX_FILE  -O2 -fwrapv -DNDEBUG -std=c99 -I "." -I "/home/arwel/Documents/RascalDev/RAT/Sandbox/octaveCaller_new4/foo" -I "./interface" -I "/usr/local/MATLAB/R2020a/extern/include" -I "." -DMODEL=callFoo_mex -c  interface/_coder_callFoo_mex.c -o build/glnxa64/_coder_callFoo_mex.o
ninja: build stopped: subcommand failed.
